--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ form button:hover {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    transition: all 0.5s ease;
 }
 
 .todo li{
@@ -75,13 +76,13 @@ form button:hover {
     border:none;
     cursor: pointer;
     font-size: 1rem;
-    transition: all 0.3s ease;
+    transition: all 0.5s ease;
 }
 .complete-btn {
     background-color:  rgb(137, 240, 137);
 }
 .complete-btn:hover {
-    background:  rgb(35, 240, 35);
+    background:  rgb(0, 148, 0);
     color:white;
 }
 .trash-btn:hover {
@@ -96,3 +97,11 @@ form button:hover {
 .fa-check {
     pointer-events: none;
 }
+.completed {
+    text-decoration: line-through;
+    opacity: 0.5;
+}
+.fall{ 
+    transform: translateY(8rem) rotateZ(20deg);
+    opacity: 0; 
+} 
